@startuml
title Class diagram - Khoa hoc, lop hoc, phong hoc va lich hoc

skinparam classAttributeIconSize 0
skinparam linetype ortho

class Subject {
  +id: String
  +name: String
  +description: String?
  +createCourse(course: Course): Course
}

class Course {
  +id: String
  +name: String
  +grade: Int
  +tuitionFee: Decimal
  +numberOfSessions: Int
  +startDate: DateTime?
  +endDate: DateTime?
  +calculateTuition(): Decimal
}

class ClassRoom {
  +id: String
  +name: String
  +maxStudents: Int
  +currentStudents: Int
  +status: ClassStatus
  +note: String?
  +canEnroll(): Boolean
  +assignRoom(room: Room): void
  +addSchedule(schedule: Schedule): void
  +updateStatus(status: ClassStatus): void
}

class Room {
  +id: String
  +name: String
  +capacity: Int
  +location: String?
  +isAvailable(dayOfWeek: Int, start: String, end: String): Boolean
}

class ClassRoomRoom {
  +classRoomId: String
  +roomId: String
  +assignedAt: DateTime
}

class Schedule {
  +id: String
  +dayOfWeek: Int
  +startTime: String
  +endTime: String
  +overlaps(other: Schedule): Boolean
}

class StudySession {
  +id: String
  +sessionDate: DateTime
  +topic: String?
  +status: SessionStatus
  +complete(): void
  +cancel(): void
}

class TeacherProfile {
  +id: String
  +teacherCode: String
  +specialization: String?
}

class TeachingAssignment {
  +id: String
  +assignedDate: DateTime
  +role: String?
}

class ClassesService <<service>> {
  +list(user: AuthUser, search?: String): ClassRoom[]
  +create(input: CreateClassInput): ClassRoom
  +update(id: String, input: UpdateClassInput): ClassRoom
  +updateStatus(id: String, status: ClassStatus): ClassRoom
  +createAssignment(input): TeachingAssignment
}

class SchedulesService <<service>> {
  +listRooms(): Room[]
  +createRoom(input): Room
  +createSchedule(input): Schedule
  +updateSchedule(id: String, input): Schedule
  +createStudySession(input): StudySession
}

enum ClassStatus {
  NOT_OPENED
  ENROLLING
  ACTIVE
  POSTPONED
  FINISHED
  CANCELLED
}

enum SessionStatus {
  SCHEDULED
  COMPLETED
  CANCELLED
}

Subject "1" -- "0..*" Course
Course "1" -- "0..*" ClassRoom
ClassRoom "1" -- "0..*" ClassRoomRoom
Room "1" -- "0..*" ClassRoomRoom
ClassRoom "1" -- "0..*" Schedule
Room "1" -- "0..*" Schedule
ClassRoom "1" -- "0..*" StudySession
TeacherProfile "1" -- "0..*" TeachingAssignment
ClassRoom "1" -- "0..*" TeachingAssignment

ClassRoom --> ClassStatus
StudySession --> SessionStatus

ClassesService ..> ClassRoom
ClassesService ..> TeachingAssignment
SchedulesService ..> Room
SchedulesService ..> Schedule
SchedulesService ..> StudySession

note bottom of Schedule
  Business rule:
  khong duoc trung phong hoc cung ngay/gio,
  khong duoc trung lich giao vien.
end note

@enduml

